backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timelab-buurtsporen
  labels:
    app: timelab-buurtsporen
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      name: http
  selector:
    app: timelab-buurtsporen
