backend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: timelab-buurtsporen
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "75"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - api.buurtsporen.be
    secretName: timelab-buurtsporen-tls
  rules:
  - host: api.buurtsporen.be
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: timelab-buurtsporen
            port:
              number: 80
